--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -2,12 +2,51 @@
     background-image: url("../assets/banner.png");
     background-size: cover;
     background-position: center;
-    width: 100%;
     height: 223px;
-    line-height: 223px;
+    width: 100%;
     border-radius: 25px;
-    font-weight: 500;
+}
+
+.banner p {
+    line-height: 223px;
     font-size: 48px;
+    font-weight: 500;
     color: white;
+    margin: 0;
     text-align: center;
+}
+
+/* tablet */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .banner {
+        height: 196px;
+    }
+
+    .banner p {
+        line-height: 196px;
+        font-size: 36px;
+    }
+}
+
+/* smartphone */
+@media screen and (max-width: 767px) {
+    .banner {
+        height: 111px;
+    }
+
+    .banner p {
+        line-height: 111px;
+        font-size: 24px;
+        text-align: center;
+    }
+}
+
+/* small smartphone */
+@media screen and (max-width: 420px) {
+    .banner p {
+        line-height: 24px;
+        font-size: 24px;
+        text-align: left;
+        padding: 31px 16px 32px 16px;
+    }
 }
