--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,4 +1,4 @@
-.accommodation {
+.card {
     height: 300px;
     width: 300px;
     display: flex;
@@ -10,7 +10,7 @@
     padding-bottom: 20px;
 }
 
-.accommodation img {
+.card img {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -19,11 +19,20 @@
     margin-bottom: 20px;
 }
 
-.accommodation p {
+.card p {
     text-align: left;
     font-weight: 500;
     font-size: 18px;
     height: 52px;
     color: white;
     margin: 0 20px 0 20px;
+}
+
+/* small smartphone */
+@media screen and (max-width: 420px) {
+    .card {
+        height: 335px;
+        width: 100%;
+        margin: 0 0 25px 0;
+    }
 }
