--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-  margin: 40px 100px 29px 100px;
+  margin: 0;
   font-family: 'Montserrat', sans-serif;
+}
+
+main {
+  margin: 0 100px 0 100px;
+}
+
+/* smartphone */
+@media screen and (max-width: 767px) {
+  main {
+    margin: 0 20px 0 20px;
+  }
 }
