--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -15,12 +15,12 @@ header ul {
 
 header li {
 	list-style: none;
-	font-weight: 500;
 	font-size: 24px;
 }
 
 header a {
 	color: #FF6060;
+	text-decoration: none;
 }
 
 /* desktop & tablet */
