--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,10 +3,21 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: #FF6060;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 main {
   margin: 0 100px 0 100px;
+}
+
+.border {
+  border: solid 5px orange;
 }
 
 /* smartphone */
