--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,5 +1,12 @@
+#home {
+    background-image: url("../assets/banner-home.png");
+}
+
+#about {
+    background-image: url("../assets/banner-about.png");
+}
+
 .banner {
-    background-image: url("../assets/banner.png");
     background-size: cover;
     background-position: center;
     height: 223px;
@@ -16,7 +23,7 @@
 
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .banner {
+    #home {
         height: 196px;
     }
 
@@ -28,7 +35,7 @@
 
 /* smartphone */
 @media screen and (max-width: 767px) {
-    .banner {
+    #home {
         height: 111px;
     }
 
