--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -1,10 +1,5 @@
-.collapse {
-    margin: 33px 108px 0 108px;
-}
-
 .title {
     background: #FF6060;
-    width: 100%;
     height: 47px;
     display: flex;
     justify-content: space-between;
@@ -14,7 +9,6 @@
 
 .title h2 {
     color: white;
-    font-weight: 500;
     font-size: 24px;
     margin: 0 0 0 18px;
     line-height: 24px;
@@ -26,7 +20,7 @@
     margin-right: 33px;
 }
 
-.collapse p {
+.text {
     background: #F7F7F7;
     color: #FF6060;
     font-weight: 400;
@@ -35,32 +29,30 @@
     padding: 19px;
 }
 
-#Sécurité {
-    margin-bottom: 46px;
+.text ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 /* smartphone */
 @media screen and (max-width: 767px) {
-    .collapse {
-        margin: 19px 0 0 0;
-    }
-
     .title {
         height: 30px;
     }
-    
+
     .title h2 {
         font-size: 13px;
         margin: 0 0 0 12px;
         line-height: 13px;
     }
-    
+
     .title img {
         width: 9px;
         margin-right: 7px;
     }
-    
-    .collapse p {
+
+    .text {
         font-size: 12px;
         padding: 17px;
     }
