--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -1,25 +1,65 @@
 .carousel {
     margin-bottom: 30px;
+    position: relative;
 }
 
-.carousel img {
+.carousel-image {
     width: 100%;
     height: 415px;
     object-fit: cover;
     border-radius: 25px;
 }
 
+.previous-image {
+    width: 47px;
+    position: absolute;
+    top: 157px;
+    left: 23px;
+}
+
+.next-image {
+    width: 47px;
+    position: absolute;
+    top: 157px;
+    right: 23px;
+    transform: rotate(180deg);
+}
+
+.image-number {
+    position: absolute;
+    width: 100%;
+    bottom: 25px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+}
 
 /* smartphone */
 @media screen and (max-width: 767px) {
     .carousel {
         margin-bottom: 15px;
     }
-    
-    .carousel img {
+
+    .carousel-image {
         width: 100%;
         height: 255px;
         object-fit: cover;
         border-radius: 10px;
+    }
+
+    .previous-image {
+        width: 12px;
+        top: 118px;
+        left: 6px;
+    }
+
+    .next-image {
+        width: 12px;
+        top: 118px;
+        right: 6px;
+    }
+
+    .image-number {
+        display: none;
     }
 }
