--- a/src/styles/Tags.css
+++ b/src/styles/Tags.css
@@ -18,6 +18,9 @@
     padding: 4px 0 4px 0;
     border-radius: 10px;
     margin: 0 10px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* smartphone */
