router sheet page ok + underline home/about

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -23,6 +23,10 @@ header a {
 	text-decoration: none;
 }
 
+.underline {
+	text-decoration: underline;
+}
+
 /* smartphone */
 @media screen and (max-width: 767px) {
 	header {
